[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "snakesay"
version = "0.0.1"
authors = [
  { name="Peter Chang", email="fenghaopeter@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]

[project.scripts]
snakey = "snakesay.cli:main"

[project.urls]
Homepage = "https://github.com/fenghaopeter/snakesay-project"